	* cc-vars.el (c-valid-offset): New function to verify a
	syntactic symbol offset setting.
	* cc-vars.el (c-offsets-alist): Variable moved from
	cc-styles.el since it's now customizable in a similar way to
	the other style variables.
	* cc-vars.el (c-old-style-variable-behavior): New variable to
	revert to the old style init behavior.

	* cc-vars.el (c-file-style, c-file-offsets): Made always
	buffer local.

	* cc-menus.el (cc-imenu-c++-generic-expression): Don't match
	the throws clause that might follow the function prototype in
	C++.

Sat Jul 24 1999  Martin Stjernholm  <bug-cc-mode@gnu.org>

	* cc-defs.el (c-beginning-of-macro): Fixed bug where point
	could move forward for macros that doesn't start in column 0.

Thu Jul 08 1999  Martin Stjernholm  <bug-cc-mode@gnu.org>

	* cc-align.el (c-indent-multi-line-block,
	c-lineup-whitesmith-in-block): Two new lineup functions for
	use in whitesmith style.

	* cc-styles.el (c-style-alist): More fixes to whitesmith
	style.  It should now handle all different braces uniformly in
	both hanging and non-hanging cases.

Wed Jul 07 1999  Martin Stjernholm  <bug-cc-mode@gnu.org>

	* cc-mode.texi: Documented the default behavior when a symbol
	doesn't exist on c-hanging-braces-alist.

Mon Jul 05 1999  Martin Stjernholm  <bug-cc-mode@gnu.org>

	* cc-cmds.el (c-indent-exp): Use a marker to save point to
	make it stay in the same position relative to the surrounding
	text.

	* cc-cmds.el (c-fill-paragraph): Force the line comment prefix
	when adaptive-fill-mode doesn't manage to get it correct.

	* cc-menus.el (cc-imenu-java-generic-expression): Handle types
	with dotted notation, e.g. foo.bar.Gnu.

	* cc-mode.el (c-initialize-cc-mode): Wrap all function calls
	within unwind-protect (previously only some were wrapped so it
	would be possible to register mode initialization when full
	initialization did not finish).

	* cc-styles.el (c-style-alist): Corrected the brace placement
	in the whitesmith style.  Thanks to Sean Luke